<resources>
    <string name="app_name">Reader</string>
    <string name="no_registration">Don\'t have account? Register <a href = "http://d6719ff8.ngrok.io/register">here</a></string>
    <string name="wrong_login">Wrong login or password. Please, try again. </string>
    <string name="login">Login</string>
    <string name="wordlist">My dictionary</string>
    <string name="open">Open</string>
    <string name="hint_add_word">To add word to your wordlist click on it on page and then click on it under page</string>
    <string name="hint_enter_login">Enter login</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="click_word">Click word to translate</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string-array name="languages_list">
        <item>Select language</item>
        <item>Russian</item>
        <item>English</item>
    </string-array>
    <string name="language">Language</string>
    <string name="must_be_logged_wordlist">You should be logged to open your wordlist</string>
    <string name="choose_file">Choose file to open</string>
    <string name="must_be_logged_book">You should be logged to open books</string>
    <string name="added_to_wordlist">added to your wordlist</string>
    <string name="about">About app</string>
    <string name="about_text">This application helps you to read e-books on English language.
        You can know the translation of each word by clicking on desired word. Also it is available to add unknown words to your wordlist.
        \nAvailable formats of books: epub</string>
    <string name="about_developers">Developers are 4th year students at MIPT:
        \n-Karazeev Anton
        \n-Pashmentov Nikita
    </string>
    <string name="about_site">Also try our <a href="http://d6719ff8.ngrok.io">site</a></string>
    <string name="recent_books">Recent books</string>
</resources>
